# flow_state

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/flow_state/: __init__.py
tests/: test_flow_state.py
