[tool.poetry]
name = "flow_state"
version = "0.1.0"
description = "This is the client side of my overall project involving tracking cod scrimmages and analyzing a roster's growth"
authors = ["gLockswiTch"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
